--- a/nerd.html
+++ b/nerd.html
@@ -44,5 +44,35 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <div class="row">
+      <div class="col">
+        <button type="button" class="btn btn-primary">jonsmells</button>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-outline-primary">
+          nerd smells
+        </button>
+      </div>
+      <div class="col">
+        <a
+          type="button"
+          class="btn btn-primary"
+          href="https://getbootstrap.com/docs/5.3/components/buttons/#button-tags"
+          role="button"
+        >
+          nerd smells really really bad
+        </a>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-primary btn-lg">
+          im jaking it
+        </button>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-primary" disabled>
+          jon sucks
+        </button>
+      </div>
+    </div>
   </body>
 </html>
